Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/default/Derr.out
Derr.java:3:1: compiler.err.annotation.missing.default.value: A, x
1 error
