Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/default/Derr.java
/* /nodynamiccopyright/ */

@A(y=1) // error: x missing
class D {
}
